# FluentAI

./: .env.example  .gitignore  AGENTS.md  ONESHOT_BUILD_PROMPT.md  README.md  electron-builder.yml  notes.md  package-lock.json  package.json  plan.md  pyproject.toml
.github/workflows/: smoke.yml
data/: progress.json
desktop/electron/: main.js  preload.js  renderer.html  security.js
docs/: CURRICULUM_DESIGN.md  FLUENTAI_LIMITLESS_IDEAL.md  GAP_AND_DESIGN.md  ONBOARDING_HOME_DESIGN.md  PACKAGING_DESIGN.md
fluent_ai/: __init__.py  agent.py  app.py  config.py  conversation.py  curriculum.py  desktop_bridge.py  openai_provider.py  state.py  ui.py  web.py
fluent_ai/curriculum/: french.json  hindi.json  spanish.json
macos/: desktop_app.py
mockups/duolingo-inspired/: index.html  render-screenshots.js
packaging/: bridge_entry.py  fluentai_bridge.spec
scripts/: build_bridge.sh  build_mac_app.sh  smoke_demo.py
tests/: test_agent.py  test_conversation_naturalness.py  test_curriculum.py  test_home_memory.py  test_main_redaction.js  test_onboarding.py  test_project_contract.py  test_reliability.py  test_renderer_ui.py  test_state_v2.py  test_vision_context.py  test_web.py
