[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluent-ai"
version = "0.2.0"
description = "Agentic language learning demo with local learner state, lesson mode, conversation mode, web, and desktop UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openai>=1.0.0"]

[project.optional-dependencies]
ui = ["gradio"]
dev = ["build>=1.2", "pytest>=8.0", "ruff>=0.6"]

[project.scripts]
fluent-ai = "fluent_ai.app:main"
fluent-ai-ui = "fluent_ai.ui:main"
fluent-ai-web = "fluent_ai.web:main"

[tool.setuptools.packages.find]
include = ["fluent_ai*"]
exclude = ["data*", "desktop*", "mockups*", "tests*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
